--- a/css/styles.css
+++ b/css/styles.css
@@ -11,11 +11,11 @@
 
 /* ---- Base Rules ---- */
 body {
-    background: rgb(136,203,171);
-    background: linear-gradient(0deg, rgba(136,203,171,1) 0%, rgba(0,13,60,1) 100%);
+    /* background: rgb(248, 250, 249); */
+    /* background: linear-gradient(0deg, rgba(136,203,171,1) 0%, rgba(0,13,60,1) 100%); */
     margin: 0;
     font-family: 'Merriweather', serif;
-    color: #fff;
+    color: rgb(2, 2, 2);
 }
 
 
