split css according to styling needs

--- a/css/reset.css
+++ b/css/reset.css
@@ -19,10 +19,13 @@
   height: 100%;
 } */
 
+/* ---- Base Rules ---- */
 body {
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
     padding: 1rem 4rem;
+    font-family: 'Merriweather', serif;
+    color: rgb(2, 2, 2);
 }
 
 img,
@@ -54,4 +57,40 @@ h6 {
 #root,
 #__next {
     isolation: isolate;
+}
+
+/* Typeography General*/
+h1 {
+    font-family: 'Fira Sans', sans-serif;
+    font-size: 3em;
+    margin: 2em 1rem;
+}
+
+@media only screen and (min-width: 35em) {
+    h1 {
+        font-size: 7em;
+        margin: 2em 4rem 1em;
+    }
+}
+
+h2 {
+    border-bottom: 1px solid #cc1;
+    font-family: 'Oxygen', Sans-Serif;
+    font-size: 3em;
+    color: #fff;
+}
+
+p {
+    line-height: 1.6em;
+    color: #eee;
+}
+
+/* ---- Layout Rules ---- */
+main {
+    margin: 10vh 1em 10vh;
+}
+
+.main-hero {
+    min-height: 40vh;
+    padding-top: 3em;
 }
