--- a/css/styles.css
+++ b/css/styles.css
@@ -8,58 +8,7 @@
  *
 */
 
-
-/* ---- Base Rules ---- */
-body {
-    /* background: rgb(248, 250, 249); */
-    /* background: linear-gradient(0deg, rgba(136,203,171,1) 0%, rgba(0,13,60,1) 100%); */
-    margin: 0;
-    font-family: 'Merriweather', serif;
-    color: rgb(2, 2, 2);
-}
-
-
-/* Typeography General*/
-h1 {
-    font-family: 'Fira Sans', sans-serif;
-    font-size: 3em;
-    margin: 2em 1rem;
-}
-
-@media only screen and (min-width: 35em){
-    h1 {
-        font-size: 7em;
-        margin: 2em 4rem 1em;
-    }
-}
-
-h2 {
-    border-bottom: 1px solid #cc1;
-    font-family: 'Oxygen', Sans-Serif;
-    font-size: 3em;
-    color: #fff;
-}
-
-p {
-    line-height: 1.6em;
-    color: #eee;
-}
-
-/* ---- Layout Rules ---- */
-main {
-    margin: 10vh 1em 10vh;
-}
-
-.main-hero {
-    min-height: 40vh;
-    padding-top: 3em;
-}
-
-section {
-    position: relative;
-    min-height: 80vh;
-}
-
+@import url("reset.css");
 
 /* ---- Module Rules ---- */
 
@@ -67,7 +16,7 @@ section {
 .navbar__menu ul {
     padding-left: 0;
     margin: 0;
-    text-align: right;
+    text-align: none;
 }
 
 .navbar__menu li {
@@ -91,10 +40,10 @@ section {
 /* Header Styles */
 .page__header {
     background: #fff;
-    position: fixed;
-    top: 0;
+    
+   
     width: 100%;
-    z-index: 5;
+   
 }
 
 /* Footer Styles */
@@ -112,88 +61,34 @@ section {
 /* ---- Theme Rules ---- */
 /* Landing Container Styles */
 .landing__container {
-    padding: 1em;
-    text-align: left;
+
+    /* padding: 1em;
+    text-align: none; */
+
 }
 
 @media only screen and (min-width: 35em){
     .landing__container {
-        max-width: 50em;
-        padding: 4em;
+
+        /* max-width: 50em;
+        padding: 4em; */
+
     }
 }
 
 section:nth-of-type(even) .landing__container {
-    margin-right: 0;
+
+    /* margin-right: 0;
     margin-left: auto;
-    text-align: right; 
-}
-
-/* Background Circles */
-/* Note that background circles are created with psuedo elements before and after */
-/* Circles appear to be random do to use of :nth-of-type psuedo class */
-section:nth-of-type(odd) .landing__container::before {
-    content: '';
-    background: rgba(255, 255, 255, 0.187);
-    position: absolute;
-    z-index: -5;
-    width: 20vh;
-    height: 20vh;
-    border-radius: 50%;
-    opacity: 0;
-    transition: ease 0.5s all;
-}
-
-section:nth-of-type(even) .landing__container::before {
-    content: '';
-    background: rgb(255,255,255);
-    background: linear-gradient(0deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.2) 100%);
-    position: absolute;
-    top: 3em;
-    right: 3em;
-    z-index: -5;
-    width: 10vh;
-    height: 10vh;
-    border-radius: 50%;
-    opacity: 0;
-    transition: ease 0.5s all;
-}
-
-section:nth-of-type(3n) .landing__container::after {
-    content: '';
-    background: rgb(255,255,255);
-    background: linear-gradient(0deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.2) 100%);
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    z-index: -5;
-    width: 10vh;
-    height: 10vh;
-    border-radius: 50%;
-    opacity: 0;
-    transition: ease 0.5s all;
-}
-
-section:nth-of-type(3n + 1) .landing__container::after {
-    content: '';
-    background: rgb(255,255,255);
-    background: linear-gradient(0deg, rgba(255,255,255,.1) 0%, rgba(255,255,255,.2) 100%);
-    position: absolute;
-    right: 20vw;
-    bottom: -5em;
-    z-index: -5;
-    width: 15vh;
-    height: 15vh;
-    border-radius: 50%;
-    opacity: 0;
-    transition: ease 0.5s all;
+    text-align: none;  */
+    
 }
 
 
 /* ---- Theme State Rules ---- */
 /* Section Active Styles */
 /* Note: your-active-class class is applied through javascript. You should update the class here and in the index.html to what you set in your javascript file.  */
-section.your-active-class {
+/* section.your-active-class {
     background: rgb(0, 0, 0);
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
 }
@@ -206,10 +101,10 @@ section.your-active-class .landing__container::before {
 section.your-active-class .landing__container::after {
     opacity: 1;
     animation: rotate 5s linear 0s infinite forwards reverse;
-}
+} */
 
 /* Section Active Styles Keyframe Animations */
-@keyframes rotate {
+/* @keyframes rotate {
 	from {
 		transform: rotate(0deg)
 		           translate(-1em)
@@ -220,4 +115,4 @@ section.your-active-class .landing__container::after {
 		           translate(-1em) 
 		           rotate(-360deg);
 	}
-}
+} */
